--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <link rel="stylesheet" th:href="@{/css/jquery-ui.min.css}" media="screen"/>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/dataTables.bootstrap.css}" media="screen" />
     <link rel="stylesheet" th:href="@{/css/app.css}"/>
 
     <title>Stack Overflow Searcher</title>
@@ -25,12 +23,16 @@
                 <div class="col-md-5 pull-right">
                     <div class="row">
                         <div class="col-lg-12">
+                            <form action="#" th:action="@{/}" th:object="${request}" method="post">
                             <div class="input-group form pull-right">
-                                <input type="text" class="form-control" placeholder="Search..."></input>
+                                <input id="page" th:value="${request.page}" type="hidden" th:field="*{page}"></input>
+                                <input id="page-size" type="hidden" th:field="*{pageSize}"></input>
+                                <input type="text" th:value="${request.title}" th:field="*{title}" class="form-control" placeholder="Title..."></input>
                                 <span class="input-group-btn">
-                                 <button class="btn btn-primary" type="button">Search</button>
+                                    <input class="btn btn-primary" type="submit" value="Search"></input>
                                </span>
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -43,26 +45,22 @@
             <div class="col-md-8 col-md-offset-2">
                 <div class="content-box-large">
                     <div class="panel-heading">
-                        <div class="panel-title">Search results</div>
+                        <div class="panel-title">Search result
+                            <span th:if="${request.title}">'</span><span th:utext="${request.title}"></span><span th:if="${request.title}">'</span>
+                        </div>
                     </div>
                     <div class="panel-body">
                         <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="question-table">
                             <thead>
                             <tr>
-                                <th>Rendering engine</th>
-                                <th>Browser</th>
-                                <th>Platform(s)</th>
-                                <th>Engine version</th>
-                                <th>CSS grade</th>
+                                <th>Question title</th>
+                                <th>Post date</th>
+                                <th>Publisher name</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr>
-                                <td>Other browsers</td>
-                                <td>All others</td>
-                                <td>-</td>
-                                <td class="center">-</td>
-                                <td class="center">U</td>
+                            <tr th:each="item : ${questions}">
+                               <td th:text="${item}"></td>
                             </tr>
                             </tbody>
                         </table>
@@ -75,19 +73,14 @@
 
     <footer>
         <div class="container">
-
             <div class="copy text-center">
                 Copyright 2018 <a href='#'>Website</a>
             </div>
-
         </div>
     </footer>
 
     <script th:src="@{/scripts/jquery-3.3.1.min.js}"></script>
-    <script th:src="@{/scripts/jquery-ui.min.js}"></script>
     <script th:src="@{/scripts/bootstrap.min.js}"></script>
-    <script th:src="@{/scripts/jquery.dataTables.min.js}"></script>
-    <script th:src="@{/scripts/dataTables.bootstrap.js}"></script>
     <script th:src="@{/scripts/app.js}"></script>
 </body>
 </html>
