--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,9 +25,9 @@
                         <div class="col-lg-12">
                             <form action="#" th:action="@{/}" th:object="${request}" method="post">
                             <div class="input-group form pull-right">
-                                <input id="page" th:value="${request.page}" type="hidden" th:field="*{page}"></input>
+                                <input id="page" type="hidden" th:field="*{page}"></input>
                                 <input id="page-size" type="hidden" th:field="*{pageSize}"></input>
-                                <input type="text" th:value="${request.title}" th:field="*{title}" class="form-control" placeholder="Title..."></input>
+                                <input type="text" th:field="*{title}" class="form-control" placeholder="Title..."></input>
                                 <span class="input-group-btn">
                                     <input class="btn btn-primary" type="submit" value="Search"></input>
                                </span>
@@ -60,7 +60,9 @@
                             </thead>
                             <tbody>
                             <tr th:each="item : ${questions}">
-                               <td th:text="${item}"></td>
+                               <td th:utext="${item.title}"></td>
+                                <td th:utext="${item.getCreationDate()}"></td>
+                                <td th:utext="${item.owner.getName()}"></td>
                             </tr>
                             </tbody>
                         </table>
