--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -50,25 +50,41 @@
                         </div>
                     </div>
                     <div class="panel-body">
-                        <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="question-table">
+                        <table th:if="${not #arrays.isEmpty(questions)}" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="question-table">
                             <thead>
                             <tr>
-                                <th>Question title</th>
+                                <th>Question</th>
                                 <th>Post date</th>
-                                <th>Publisher name</th>
+                                <th>Publisher</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr th:each="item : ${questions}">
-                               <td th:utext="${item.title}"></td>
-                                <td th:utext="${item.getCreationDate()}"></td>
-                                <td th:utext="${item.owner.getName()}"></td>
+                                <td>
+                                    <th:block th:switch="${item.isAnswerAccepted()}">
+                                        <span th:case="false" class="badge" th:utext="${item.getAnswerCount()}" th:title="${item.getAnswerCount()}+' answer(s)'"></span>
+                                        <span th:case="true" class="badge answer-accepted" th:utext="${item.getAnswerCount()}" th:title="${item.getAnswerCount()}+' answer(s)/accepted'"></span>
+                                    </th:block>
+
+                                    <a th:href="${item.getLink()}" target="_blank">
+                                        <span class="question-title" th:utext="${item.getTitle()}"></span>
+                                    </a>
+                                </td>
+                                <td th:utext="${#temporals.format(item.getCreationDate(), 'MMM dd yyyy HH:mm')}"></td>
+                                <td>
+                                    <p>
+                                        <img class="avatar" th:src="${#strings.defaultString(item.getPublisherImage(), '/images/avatar.png')}"></img>
+                                        <a th:href="${item.getPublisherLink()}" th:if="${not #strings.isEmpty(item.getPublisherLink())}" target="_blank">
+                                            <span th:utext="${item.getPublisherName()}"></span>
+                                        </a>
+                                        <span th:utext="${item.getPublisherName()}" th:if="${#strings.isEmpty(item.getPublisherLink())}"></span>
+                                    </p>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
