--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -24,8 +24,6 @@ body {
     margin-top: 30px;
 }
 
-/* Footer */
-
 footer{
     background-color:#2c3742;
     box-shadow:inset 0px 0px 3px #111;
@@ -52,11 +50,13 @@ footer .copy{
     margin:15px 0px;
 }
 
-/* Logo & Navigation */
-
 .header{
-    height:50px;
+    height:auto;
     background-color: #2c3742;
+}
+
+.header .logo{
+    text-align:center;
 }
 
 .header .logo h1{
@@ -80,6 +80,7 @@ footer .copy{
     margin:10px auto;
 }
 
+.content-box-small,
 .content-box-large {
     margin-bottom:30px;
     background:#fff;
@@ -89,8 +90,15 @@ footer .copy{
     border-top:1px solid #eee;
     border-right:2px solid #eee;
     border-bottom:2px solid #eee;
-    min-height: 500px;
     padding: 20px;
+}
+
+.content-box-small {
+    min-height: 200px;
+}
+
+.content-box-large {
+    min-height: 500px;
 }
 
 .panel-heading>.panel-title {
@@ -119,20 +127,16 @@ footer .copy{
     clear:both;
 }
 
-.header{
-    height:auto;
-    padding:15px 0px;
-}
-.header .logo{
-    text-align:center;
-    padding-bottom:10px;
-}
-.header .form{
-    margin:10px auto;
-}
-
 p {
     margin: 0;
+}
+
+.table {
+    margin-bottom: 0;
+}
+
+.dropdown-menu {
+    min-width: auto;
 }
 
 img.avatar {
@@ -146,3 +150,11 @@ img.avatar {
 .answer-accepted {
     background-color: green;
 }
+
+.advert {
+    font-size: 40px;
+    color: #787878;
+    opacity: 0.2;
+    text-align: center;
+}
+
