--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <form action="#" th:action="@{/}" th:object="${request}" method="post">
-                            <div class="input-group form pull-right">
+                            <div class="input-group form">
                                 <input id="page" type="hidden" th:field="*{page}"></input>
                                 <input id="page-size" type="hidden" th:field="*{pageSize}"></input>
                                 <input type="text" th:field="*{title}" class="form-control" placeholder="Title..."></input>
@@ -43,14 +43,30 @@
     <div class="page-content">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <div class="content-box-large">
-                    <div class="panel-heading">
+                <div class="content-box-small" th:if="${request.title == null}">
+                    <p class="advert">Here could be your advertising</p>
+                </div>
+                <div class="content-box-small" th:if="${request.title != null} and ${#arrays.isEmpty(questions)}">
+                    <p class="advert">Nothing to show</p>
+                </div>
+                <div class="content-box-large" th:if="${not #arrays.isEmpty(questions)}">
+                    <div class="panel-heading row">
                         <div class="panel-title" th:if="${request.title}">
-                            <span th:utext="'\''+${request.title}+'\''"></span>
+                            <span th:utext="${request.title}"></span>
                         </div>
                     </div>
-                    <div class="panel-body">
-                        <table th:if="${not #arrays.isEmpty(questions)}" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="question-table">
+                    <div class="dropdown" title="page size">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" th:text="${request.pageSize}">
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="page-size-select" th:with="sizeList = ${ {10, 20, 50, 100} }">
+
+                            <li th:each="v : ${sizeList}" th:classappend="${request.pageSize == v} ? 'active' : ''"><a th:attr="data-value=${v}" data-value="20" th:text="${v}" href="#"></a></li>
+
+                        </ul>
+                    </div>
+                    <div class="panel-body row">
+                        <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="question-table">
                             <thead>
                             <tr>
                                 <th>Question</th>
@@ -63,7 +79,7 @@
                                 <td>
                                     <th:block th:switch="${item.isAnswerAccepted()}">
                                         <span th:case="false" class="badge" th:utext="${item.getAnswerCount()}" th:title="${item.getAnswerCount()}+' answer(s)'"></span>
-                                        <span th:case="true" class="badge answer-accepted" th:utext="${item.getAnswerCount()}" th:title="${item.getAnswerCount()}+' answer(s)/accepted'"></span>
+                                        <span th:case="true" class="badge answer-accepted" th:utext="${item.getAnswerCount()}" th:title="'Accepted with '+${item.getAnswerCount()}+' answer(s)'"></span>
                                     </th:block>
 
                                     <a th:href="${item.getLink()}" target="_blank">
@@ -84,6 +100,7 @@
                             </tbody>
                         </table>
                     </div>
+                    <div class="content-footer">123</div>
                 </div>
             </div>
         </div>
