--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,105 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/app.css}"/>
-
     <title>Stack Overflow Searcher</title>
 </head>
 <body>
 
-    <div th:replace="fragments/header :: header (${request})"></div>
+    <th:block layout:fragment="content">
 
-    <div class="page-content" th:with="questions = ${result?.getItems()}">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="content-box-small" th:if="${request.title == null}">
-                    <span class="advert">Here could be your advertising</span>
-                </div>
-                <div class="content-box-small" th:if="${request.title != null} and ${#arrays.isEmpty(questions)}">
-                    <span class="advert">Nothing to show</span>
-                </div>
-                <div class="content-box-large" th:if="${not #arrays.isEmpty(questions)}">
-                    <div class="dropdown" title="page size">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" th:text="${result.getPageSize()}">
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="page-size-select" th:with="sizeList = ${ {10, 20, 30, 50, 100} }">
-
-                            <li th:each="v : ${sizeList}" th:classappend="${result.getPageSize() == v} ? 'active' : ''"><a th:attr="data-value=${v}" data-value="20" th:text="${v}" href="#"></a></li>
-
-                        </ul>
-                    </div>
-                    <div class="panel-body row">
-                        <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="question-table">
-                            <thead>
-                            <tr>
-                                <th>Question</th>
-                                <th>Post date</th>
-                                <th>Publisher</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="item : ${questions}">
-                                <td>
-                                    <th:block th:switch="${item.isAnswerAccepted()}">
-                                        <span th:case="false" class="badge" th:utext="${item.getAnswerCount()}" th:title="${item.getAnswerCount()}+' answer(s)'"></span>
-                                        <span th:case="true" class="badge answer-accepted" th:utext="${item.getAnswerCount()}" th:title="'Accepted with '+${item.getAnswerCount()}+' answer(s)'"></span>
-                                    </th:block>
-
-                                    <a th:href="${item.getLink()}" target="_blank" title="Go to question's page">
-                                        <span class="question-title" th:utext="${item.getTitle()}"></span>
-                                    </a>
-                                </td>
-                                <td class="text-nowrap" th:utext="${#temporals.format(item.getCreationDate(), 'MMM dd yyyy HH:mm')}"></td>
-                                <td class="text-nowrap">
-                                    <p>
-                                        <img class="avatar" th:src="${#strings.defaultString(item.getPublisherImage(), '/images/avatar.png')}"></img>
-                                        <a th:href="${item.getPublisherLink()}" th:if="${not #strings.isEmpty(item.getPublisherLink())}" target="_blank" title="Go to user's profile page">
-                                            <span th:utext="${item.getPublisherName()}"></span>
-                                        </a>
-                                        <span th:utext="${item.getPublisherName()}" th:if="${#strings.isEmpty(item.getPublisherLink())}"></span>
-                                    </p>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="content-footer" th:with="firstItemNumber = (${result.getPageSize()}*(${result.getCurrentPage()}-1)+1)">
-                        <span th:text="'Showing '+${firstItemNumber}+' to '+(${firstItemNumber}+${#arrays.length(result.getItems())-1})+' of '+${result.getTotalItemsCount()+' items'}"></span>
-                        <nav aria-label="Page navigation" class="footer-pagination">
-                            <ul class="pagination" id="page-select" th:with="lastPage = ${(result.getTotalItemsCount() + (result.getPageSize() - 1))/result.getPageSize()}">
-                                <li th:classappend="${result.getCurrentPage() == 1} ? 'disabled' : ''">
-                                    <a href="#" aria-label="Previous" th:attr="data-value=${result.getCurrentPage() - 1}">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li th:if="${result.getCurrentPage() - 2} > 0"><a href="#" th:text="${result.getCurrentPage() - 2}" th:attr="data-value=${result.getCurrentPage() - 2}"></a></li>
-                                <li th:if="${result.getCurrentPage() - 1} > 0"><a href="#" th:text="${result.getCurrentPage() - 1}" th:attr="data-value=${result.getCurrentPage() - 1}"></a></li>
-                                <li class="active"><a href="#" th:text="${result.getCurrentPage()}" th:attr="data-value=${result.getCurrentPage()}"></a></li>
-                                <li th:if="${result.getCurrentPage() + 1} &lt;= ${lastPage}"><a href="#" th:text="${result.getCurrentPage() + 1}" th:attr="data-value=${result.getCurrentPage() + 1}"></a></li>
-                                <li th:if="${result.getCurrentPage() + 2} &lt;= ${lastPage}"><a href="#" th:text="${result.getCurrentPage() + 2}" th:attr="data-value=${result.getCurrentPage() + 2}"></a></li>
-                                <li th:classappend="(${result.getCurrentPage() == lastPage} or ${lastPage == 0}) ? 'disabled' : ''">
-                                    <a href="#" aria-label="Next" th:attr="data-value=${result.getCurrentPage() + 1}">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
+        <div class="page-content" th:with="questions = ${result?.getItems()}">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="content-box-small" th:if="${request.title == null}">
+                        <span class="advert">Here could be your advertising</span>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div th:replace="fragments/footer :: copy"></div>
-
-    <script th:src="@{/scripts/jquery-3.3.1.min.js}"></script>
-    <script th:src="@{/scripts/bootstrap.min.js}"></script>
-    <script th:src="@{/scripts/app.js}"></script>
+    </th:block>
 </body>
 </html>
