Added 2 more fragments for page selector and page size selector

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,10 +9,10 @@
 
     <th:block layout:fragment="content">
 
-        <div class="page-content" th:with="questions = ${result?.getItems()}">
+        <div class="page-content">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <div class="content-box-small" th:if="${request.title == null}">
+                    <div class="content-box-small">
                         <span class="advert">Here could be your advertising</span>
                     </div>
                 </div>
