--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -16,16 +16,9 @@
                     <span class="advert">Nothing to show</span>
                 </div>
                 <div class="content-box-large" th:if="${not #arrays.isEmpty(questions)}">
-                    <div class="dropdown" title="page size">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" th:text="${result.getPageSize()}">
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" id="page-size-select" th:with="sizeList = ${ {10, 20, 30, 50, 100} }">
 
-                            <li th:each="v : ${sizeList}" th:classappend="${result.getPageSize() == v} ? 'active' : ''"><a th:attr="data-value=${v}" data-value="20" th:text="${v}" href="#"></a></li>
+                    <div th:replace="fragments/pageSizeSelect :: pageSizeSelect (${result.getPageSize()})"></div>
 
-                        </ul>
-                    </div>
                     <div class="panel-body row">
                         <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="question-table">
                             <thead>
@@ -61,28 +54,9 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="content-footer" th:with="firstItemNumber = (${result.getPageSize()}*(${result.getCurrentPage()}-1)+1)">
-                        <span th:text="'Showing '+${firstItemNumber}+' to '+(${firstItemNumber}+${#arrays.length(result.getItems())-1})+' of '+${result.getTotalItemsCount()+' items'}"></span>
-                        <nav aria-label="Page navigation" class="footer-pagination">
-                            <ul class="pagination" id="page-select" th:with="lastPage = ${(result.getTotalItemsCount() + (result.getPageSize() - 1))/result.getPageSize()}">
-                                <li th:classappend="${result.getCurrentPage() == 1} ? 'disabled' : ''">
-                                    <a href="#" aria-label="Previous" th:attr="data-value=${result.getCurrentPage() - 1}">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li th:if="${result.getCurrentPage() - 2} > 0"><a href="#" th:text="${result.getCurrentPage() - 2}" th:attr="data-value=${result.getCurrentPage() - 2}"></a></li>
-                                <li th:if="${result.getCurrentPage() - 1} > 0"><a href="#" th:text="${result.getCurrentPage() - 1}" th:attr="data-value=${result.getCurrentPage() - 1}"></a></li>
-                                <li class="active"><a href="#" th:text="${result.getCurrentPage()}" th:attr="data-value=${result.getCurrentPage()}"></a></li>
-                                <li th:if="${result.getCurrentPage() + 1} &lt;= ${lastPage}"><a href="#" th:text="${result.getCurrentPage() + 1}" th:attr="data-value=${result.getCurrentPage() + 1}"></a></li>
-                                <li th:if="${result.getCurrentPage() + 2} &lt;= ${lastPage}"><a href="#" th:text="${result.getCurrentPage() + 2}" th:attr="data-value=${result.getCurrentPage() + 2}"></a></li>
-                                <li th:classappend="(${result.getCurrentPage() == lastPage} or ${lastPage == 0}) ? 'disabled' : ''">
-                                    <a href="#" aria-label="Next" th:attr="data-value=${result.getCurrentPage() + 1}">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+
+                    <div th:replace="fragments/pageSelect :: pageSelect (${result.getCurrentPage()},${result.getPageSize()}, ${#arrays.length(result.getItems())}, ${result.getTotalItemsCount()})"></div>
+
                 </div>
             </div>
         </div>
